Fixed issue where icons would appear jumpy on first toggle of sidenav. Aligned all links with MoPD logo.

--- a/HR_Leave/Styles/MasterStyleSheet.css
+++ b/HR_Leave/Styles/MasterStyleSheet.css
@@ -36,7 +36,7 @@
 }
 
 #sidebar ul.components {
-    padding-top: 20px;
+    padding-top: 10px;
     border-bottom: 1px solid #47748b;
 }
 
@@ -46,7 +46,7 @@
 }
 
 #sidebar ul li a {
-    padding: 10px;
+    padding: 10px 0px 10px 25px;
     font-size: 1.1em;
     display: block;
 }
